--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,18 @@
 spring.application.name=scm
 server.port=8080
+# mysql database configurations
+#data source url
+spring.datasource.url=jdbc:mysql://localhost:3306/scm
+spring.datasource.username=root
+spring.datasource.password=root1234
+
+#jpa configurations
+spring.jpa.show-sql=true
+#for creating schemas and tables
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+#email configuration
