--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,9 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
+# security configuration 
+
+spring.security.user.name=user
+spring.security.user.password=user
+
 #email configuration
