added google login oauth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.security.user.name=user
 spring.security.user.password=user
 
-#email configuration
+#oauth2 configuration
+
+spring.security.oauth2.client.registration.google.client-name=google
+
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
