--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.security.user.password=user
 #oauth2 configuration
 
 spring.security.oauth2.client.registration.google.client-name=google
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
